[project]
name = "microkanren"
version = "0.3.0"
authors = [
    { name="Joshua Munn", email="public@elysee-munn.family" },
]
description = "A Python implementation of microkanren extended with constraints"
readme = "README.md"
requires-python = "~=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    "pyrsistent ~= 0.19",
    "fastcons ~= 0.2.0",
]
license = {file = "LICENSE"}

[project.urls]
"Homepage" = "https://github.com/jams2/microkanren"
"Bug Tracker" = "https://github.com/jams2/microkanren/issues"

[project.optional-dependencies]
dev = [
    "black ~= 23.1.0",
    "ruff ~= 0.0.256",
]
testing = ["pytest ~= 7.2.2", "pytest-profiling ~= 1.7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
minversion = 7.0

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py311"
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "I",   # isort
  "ARG", # unused arguments
  "PT",  # pytest style
  "T10", # flake8-debugger
  "C4",  # flake8-comprehensions
]
unfixable = [
  "ARG", # unused arguments
]

[tool.pyright]
pythonVersion = "3.11"
stubPath = ""
