[project]
name = "microkanren"
version = "0.4.3"
authors = [
    { name="Joshua Munn", email="public@elysee-munn.family" },
]
description = "A Python implementation of microkanren extended with constraints"
readme = "README.md"
requires-python = ">=3.11,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    "pyrsistent >= 0.19, < 1",
    "fastcons == 0.4.1",
    "immutables >= 0.19, < 1",
]
license = {file = "LICENSE"}

[project.urls]
"Homepage" = "https://github.com/jams2/microkanren"
"Bug Tracker" = "https://github.com/jams2/microkanren/issues"

[project.optional-dependencies]
dev = [
    "black == 23.10.0",
    "ruff == 0.1.0",
]
testing = ["tox == 4.11.3", "pytest == 7.2.2", "pytest-profiling == 1.7.0"]
build = ["hatch == 1.7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
minversion = 7.0

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py311"
select = [
  "B",       # flake8-bugbear
  "BLE",     # flake8-blind-except
  "PGH",     # pygrep-hooks
  "E",       # pycodestyle
  "F",       # pyflakes
  "UP",      # pyupgrade
  "I",       # isort
  "ARG",     # unused arguments
  "PT",      # pytest style
  "T10",     # flake8-debugger
  "C4",      # flake8-comprehensions
  "RUF100",  # unused-noqa
  "S",       # flake8-bandit
  "T20",     # flake8-print
  "W",       # pycodestyle warnings
  "YTT",     # flake8-2020
]
unfixable = [
  "ARG",     # unused arguments
]
ignore = [
  "S101",    # Use of `assert`
]

[isort]
known-first-party = ["microkanren"]
lines-between-types = 1
lines-after-imports = 2

[tool.pyright]
pythonVersion = "3.11"
stubPath = ""
